--- a/static/scss/_partials/portrait-mobile/pages/_wishlist-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_wishlist-page.scss
@@ -7,17 +7,18 @@
 .wishlist-remove-btn {
     width: 8vw;
     position: absolute;
-    left: 88.7%;
+    left: 69vw;
+    top: 4vw;
     color: rgb(189, 0, 0);
 }
 
 .wishlist-remove-btn i {
-    font-size: 5.5vw;
+    font-size: 7.5vw;
 }
 
-.staricon-not-added ,
+.staricon-not-added,
 .staricon-added {
-    font-size: 5.5vw;
+    font-size: 7.5vw;
 }
 
 .staricon-not-added {
