--- a/static/scss/_partials/portrait-mobile/pages/_login-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_login-page.scss
@@ -7,44 +7,46 @@
     width: 90vw;
 }
 
-#login-btn {
-    width: 40vw;
-    font-family: $dosisFont;
-    font-size: 5.5vw;
-    background-color: lightblue;
-}
-
 #reset-register-wrapper,
-.login-btn-wrapper {
+#login-btn-wrapper {
     display: flex;
     font-family: $dosisFont;
     font-size: 5.5vw;
     width: 100%;
 
     margin: {
-        top: 12vw;
+        top: 2vw;
         bottom: 2vw;
     }
 }
 
-#password-reset-link {
-    width: 40vw;
-    background-color: orange;
-    color: black;
-    font-family: $dosisFont;
-    font-size: 5.5vw;
+#login-btn {
+    background-color: lightblue;
+    color: rgb(65, 65, 65);
 }
 
-#or-div {
-    width: 10vw;
-    font-family: $dosisFont;
-    font-size: 5.5vw;
+#password-reset-link {
+    background-color: orange;
+    margin-right: 2.4vw;
 }
 
 #register-link {
-    width: 40vw;
     background-color: rgb(0, 170, 0);
-    color: black;
+    margin-left: 2.4vw;
+}
+
+#login-btn, #password-reset-link,  #register-link {
+    width: 40vw;
     font-family: $dosisFont;
     font-size: 5.5vw;
+}
+
+
+#password-reset-link a, #register-link a {
+    color: rgb(65, 65, 65);
+    transition: color .4s ease-in-out;
+}
+
+#login-btn a:hover, #password-reset-link a:hover, #register-link a:hover {
+    color: darkred;
 }
